# mapr

./: .clang-format  .clang-tidy  .gitignore  .maprc.yml  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  sample.cpp
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  project-info.cmake  variables.cmake
resources/templates/: externPrelude.hpp  overloadPrelude.hpp
samples/: sample1.cpp
source/: lib.cpp  main.cpp
src/: main.cpp
src/app/: main.cpp
src/app/cli/: cliOptionsParser.cpp  cliOptionsParser.hpp  commandLineException.cpp  commandLineException.hpp  utils.cpp  utils.hpp
src/app/parser/: sourceParser.cpp  sourceParser.hpp
src/app/pipeline/: declarationsPipeline.cpp  declarationsPipeline.hpp  definitionsPipeline.cpp  definitionsPipeline.hpp  pipelineBase.cpp  pipelineBase.hpp
src/app/sanitizer/: codeSanitizer.cpp  codeSanitizer.hpp
src/config/: configParser.cpp  configParser.hpp  invalidConfigException.cpp  invalidConfigException.hpp  pipelineContext.cpp  pipelineContext.hpp  toolProperties.cpp  toolProperties.hpp
src/filtering/: filterChain.cpp  filterChain.hpp
src/filtering/filters/: declNameFilter.cpp  declNameFilter.hpp  filenameFilter.cpp  filenameFilter.hpp  filterBase.cpp  filterBase.hpp
src/match/: matchContext.cpp  matchContext.hpp  matcherBase.hpp  nameResolver.cpp  nameResolver.hpp  overloadMismatchException.cpp  overloadMismatchException.hpp  templateArgumentResolver.cpp  templateArgumentResolver.hpp  typeResolver.cpp  typeResolver.hpp
src/match/matchers/: bannedOperators.cpp  bannedOperators.hpp  classMatcher.cpp  classMatcher.hpp  enumMatcher.cpp  enumMatcher.hpp  functionMatcher.cpp  functionMatcher.hpp  matcherBase.hpp  operatorMatcher.cpp  operatorMatcher.hpp  primitiveFunctionMatcher.cpp  primitiveFunctionMatcher.hpp  recordMatcher.cpp  recordMatcher.hpp  structMatcher.cpp  structMatcher.hpp  templateInstantiationMatcher.cpp  templateInstantiationMatcher.hpp  typedefMatcher.cpp  typedefMatcher.hpp
src/transform/: mappers.hpp  sourceTransformer.cpp  sourceTransformer.hpp  typecastHelper.cpp  typecastHelper.hpp  writerStream.cpp  writerStream.hpp
src/transform/aux/: auxDecl.cpp  auxDecl.hpp  templateFile.cpp  templateFile.hpp  typeDecl.cpp  typeDecl.hpp
src/transform/auxl/: auxDecl.cpp  includeFile.cpp  includeFile.hpp  templateFile.cpp  templateFile.hpp  typeDecl.cpp  typeDecl.hpp
src/transform/dependencies/: auxRequest.cpp  auxRequest.hpp  declRequest.cpp  declRequest.hpp  dependencyRequest.cpp  dependencyRequest.hpp  dependencyResolver.cpp  dependencyResolver.hpp  typeRequest.cpp  typeRequest.hpp
src/transform/exceptions/: undefinedDeclException.cpp  undefinedDeclException.hpp  unsupportedTypeException.cpp  unsupportedTypeException.hpp
src/transform/mappers/: auxMapper.cpp  auxMapper.hpp  enumMapper.cpp  enumMapper.hpp  functionMapper.cpp  functionMapper.hpp  mapperBase.hpp  typeMapper.cpp  typeMapper.hpp
src/transform/name/: functionNameTransformer.cpp  functionNameTransformer.hpp  namespacedNameTransformer.cpp  namespacedNameTransformer.hpp  qualifiedNameTransformer.cpp  qualifiedNameTransformer.hpp  typeNameTransformer.cpp  typeNameTransformer.hpp
src/transform/writers/: assignmentWriter.cpp  assignmentWriter.hpp  blockWriter.cpp  blockWriter.hpp  c11GenericWriter.cpp  c11GenericWriter.hpp  cxxCastWriter.cpp  cxxCastWriter.hpp  defineConditionWriter.cpp  defineConditionWriter.hpp  defineWriter.cpp  defineWriter.hpp  deleteWriter.cpp  deleteWriter.hpp  dereferenceWriter.cpp  dereferenceWriter.hpp  dynCtorInvocationWriter.cpp  dynCtorInvocationWriter.hpp  enumWriter.cpp  enumWriter.hpp  expressionCallWriter.cpp  expressionCallWriter.hpp  externCWriter.cpp  externCWriter.hpp  functionWriter.cpp  functionWriter.hpp  ieeWriter.cpp  ieeWriter.hpp  includeWriter.cpp  includeWriter.hpp  lineEscapedWriter.cpp  lineEscapedWriter.hpp  macroBlockWriter.cpp  macroBlockWriter.hpp  memberAccessWriter.cpp  memberAccessWriter.hpp  pointerTypeWriter.cpp  pointerTypeWriter.hpp  pointerizeWriter.cpp  pointerizeWriter.hpp  (+8 more)
src/util/: collectionUtils.cpp  collectionUtils.hpp  concepts.hpp  macro.hpp  matchType.hpp  resourceLoader.cpp  resourceLoader.hpp  stringBuilder.cpp  stringBuilder.hpp  stringBuilderSupportedTypes.inc
src/util/exceptions/: baseException.cpp  baseException.hpp  resourceNotFoundException.cpp  resourceNotFoundException.hpp
src/util/tree/: nodeBase.cpp  nodeBase.hpp  valueNode.cpp  valueNode.hpp
src/view/: declBase.cpp  declBase.hpp  declContext.cpp  declContext.hpp  namespacedName.cpp  namespacedName.hpp  sparseDecl.cpp  sparseDecl.hpp  types.hpp  varDecl.cpp  varDecl.hpp
src/view/enum/: enumDecl.cpp  enumDecl.hpp  enumMemberDecl.cpp  enumMemberDecl.hpp
src/view/exceptions/: alreadyExistsException.cpp  alreadyExistsException.hpp
src/view/function/: functionBase.hpp  functionDecl.cpp  functionDecl.hpp  functionOverload.cpp  functionOverload.hpp  operatorDecl.cpp  operatorDecl.hpp  primitiveFunction.cpp  primitiveFunction.hpp
src/view/loc/: singleSourceLoc.cpp  singleSourceLoc.hpp  sourceLoc.hpp  sparseSourceLoc.cpp  sparseSourceLoc.hpp
src/view/name/: nameFragment.cpp  nameFragment.hpp  qualifiedName.cpp  qualifiedName.hpp
src/view/record/: recordCtorDecl.cpp  recordCtorDecl.hpp  recordDecl.cpp  recordDecl.hpp  recordDtorDecl.cpp  recordDtorDecl.hpp  recordMethodDecl.cpp  recordMethodDecl.hpp  recordOperatorDecl.cpp  recordOperatorDecl.hpp  syntheticGetterDecl.cpp  syntheticGetterDecl.hpp  syntheticSetterDecl.cpp  syntheticSetterDecl.hpp
src/view/type/: primitiveType.cpp  primitiveType.hpp  typeBase.cpp  typeBase.hpp
src/view/types/: aliasType.cpp  aliasType.hpp  builtinType.cpp  builtinType.hpp  enumType.cpp  enumType.hpp  pointerType.cpp  pointerType.hpp  recordType.cpp  recordType.hpp  referenceType.cpp  referenceType.hpp  typeBase.cpp  typeBase.hpp
test/: CMakeLists.txt
test/source/: kodgen_test.cpp
test/src/: kodgen_test.cpp
tools/: commons.rb  ensure-include-guards.rb  ensure-include-style.rb  resolve-crossmod-deps.rb
(+66 files in other folders)
